--- a/contato.html
+++ b/contato.html
@@ -37,14 +37,14 @@
     <main>
 
         <!-- Seção do Formulário -->
-        <form action="#" method="submit" id="formulario">
+        <form action="#" method="post" id="formulario">
 
             <label for="nome">Nome: </label>
             <input id="name" type="text" name="name" placeholder="Digite seu nome" />
             <span id="errNome"></span>
 
             <label for="email">Email: </label>
-            <input id="email" type="text" name="email" placeholder="Digite seu email" />
+            <input id="email" type="email" name="email" placeholder="Digite seu email" />
             <span id="errEmail"></span>
 
             <label for="subject">Assunto: </label>
