--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Janielle Oliveira" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <link rel="icon" type="image/svg" href="./assets/img/favicon.svg" />
-    
+
     <!-- Link para a Folha de Estilo da Página - CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 
@@ -31,7 +31,7 @@
       <!-- Seção sobre -->
       <section id="about">
         <!-- Título da Seção -->
-        <h2>Sobre Janielle</h2>
+        <h2>Sobre mim</h2>
 
         <article>
           <!-- Foto do Perfil -->
