Estilizar Seção Footer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             em projetos com JavaScript e TypeScript. Atualmente, estou em
             constante aprimoramento nas tecnologias React, Node.js e NestJS, por
             meio do Bootcamp Código Raiz Full Stack JavaScript Jr. da Generation
-            Brasil. Tenho conhecimento intermediário em Java com Spring Boot
+            Brasil. Tenho noções de Java com Spring Boot
             para desenvolvimento Back-End, além de domínio em bancos de dados
-            SQL e NoSQL. Também possuo vivência com Git/GitHub para
+            SQL. Também possuo vivência com Git/GitHub para
             versionamento, Docker para conteinerização e testes unitários com
             JUnit e Mockito, garantindo qualidade e confiabilidade nas entregas.
             Sou uma profissional analítica, colaborativa e orientada a
