Estilizar Seção Formulário

--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg" />
 
     <!-- Link para a Folha de Estilo da Página - CSS -->
-	<link rel="stylesheet" href="./assets/css/styles.css" />
+	 <link rel="stylesheet" href="./assets/css/style.css" />
 
     <title>Contato</title>
 </head>
@@ -34,12 +34,12 @@
     </header>
 
     <!-- Seção Principal da Página (main) -->
-    <main>
+    <main class="main_contato">
 
         <!-- Seção do Formulário -->
         <form action="#" method="post" id="formulario">
 
-            <label for="nome">Nome: </label>
+            <label for="name">Nome: </label>
             <input id="name" type="text" name="name" placeholder="Digite seu nome" />
             <span id="errNome"></span>
 
@@ -101,7 +101,7 @@
         </section>
 
         <h3>
-            Feito com 💙 por Janielle Oliveira - 2025
+            Feito com 💚 por Janielle Oliveira - 2025
         </h3>
 
     </footer>
