--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </a>
       </section>
 
-      <h3>Feito com 💙 por Janielle Oliveira</h3>
+      <h3>Feito com 💚 por Janielle Oliveira</h3>
     </footer>
   </body>
 </html>
