Estilizar Seção Mapa

--- a/contato.html
+++ b/contato.html
@@ -59,7 +59,7 @@
         </form>
 
         <!-- Seção do Google Maps -->
-        <article>
+        <article class="article_mapa">
 
             <address>
                 <p>Plano Piloto</p>
