feat: adicionar seção Meus Projetos estilizada

--- a/index.html
+++ b/index.html
@@ -47,17 +47,57 @@
             em projetos com JavaScript e TypeScript. Atualmente, estou em
             constante aprimoramento nas tecnologias React, Node.js e NestJS, por
             meio do Bootcamp Código Raiz Full Stack JavaScript Jr. da Generation
-            Brasil. Tenho noções de Java com Spring Boot
-            para desenvolvimento Back-End, além de domínio em bancos de dados
-            SQL. Também possuo vivência com Git/GitHub para
-            versionamento, Docker para conteinerização e testes unitários com
-            JUnit e Mockito, garantindo qualidade e confiabilidade nas entregas.
-            Sou uma profissional analítica, colaborativa e orientada a
-            resultados, com facilidade para atuar em equipes multidisciplinares
-            e em ambientes dinâmicos. Busco constantemente evoluir tecnicamente,
-            aprender novas ferramentas e contribuir para soluções que gerem
-            impacto e valor.
+            Brasil. Tenho noções de Java com Spring Boot para desenvolvimento
+            Back-End, além de domínio em bancos de dados SQL. Também possuo
+            vivência com Git/GitHub para versionamento, Docker para
+            conteinerização e testes unitários com JUnit e Mockito, garantindo
+            qualidade e confiabilidade nas entregas. Sou uma profissional
+            analítica, colaborativa e orientada a resultados, com facilidade
+            para atuar em equipes multidisciplinares e em ambientes dinâmicos.
+            Busco constantemente evoluir tecnicamente, aprender novas
+            ferramentas e contribuir para soluções que gerem impacto e valor.
           </p>
+        </article>
+      </section>
+
+      <!-- Seção Extra: Meus Projetos -->
+      <section id="projects">
+        <h2>Meus Projetos</h2>
+
+        <article class="project-card">
+          <h3>Up Body</h3>
+          <p>Aplicativo fitness personalizado</p>
+          <a href="https://github.com/Commit8/up_body" target="_blank"
+            >Ver no GitHub</a
+          >
+        </article>
+
+        <article class="project-card">
+          <h3>Maria Gasolina</h3>
+          <p>App de caronas compartilhadas</p>
+          <a href=" https://github.com/Commit8/maria_gasolina" target="_blank"
+            >Ver no GitHub</a
+          >
+        </article>
+
+        <article class="project-card">
+          <h3>Blog</h3>
+          <p>Blog Pessoal Desenvolvido com NestJS</p>
+          <a
+            href="https://github.com/JanielleOliveira/blogpessoal_nest"
+            target="_blank"
+            >Ver no GitHub</a
+          >
+        </article>
+
+        <article class="project-card">
+          <h3>CRM</h3>
+          <p>CRM Simples desenvolvido em Java com Spring Boot</p>
+          <a
+            href="https://github.com/JanielleOliveira/crm-spring-boot"
+            target="_blank"
+            >Ver no GitHub</a
+          >
         </article>
       </section>
 
