--- a/contato.html
+++ b/contato.html
@@ -1,111 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Projeto Portfólio">
-    <meta name="author" content="Janielle Oliveira">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Projeto Portfólio" />
+    <meta name="author" content="Janielle Oliveira" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
     <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg" />
 
     <!-- Link para a Folha de Estilo da Página - CSS -->
-	 <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <title>Contato</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Cabeçalho da Página (header) -->
     <header>
+      <!-- Título do cabeçalho -->
+      <h1>Janielle Oliveira</h1>
 
-        <!-- Título do cabeçalho -->
-        <h1>Janielle Oliveira</h1>
-
-        <!-- Menu de Navegação -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-
+      <!-- Menu de Navegação -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Seção Principal da Página (main) -->
     <main class="main_contato">
+      <!-- Seção do Formulário -->
+      <form action="#" method="post" id="formulario">
+        <label for="name">Nome: </label>
+        <input
+          id="name"
+          type="text"
+          name="name"
+          placeholder="Digite seu nome"
+        />
+        <span id="errNome"></span>
 
-        <!-- Seção do Formulário -->
-        <form action="#" method="post" id="formulario">
+        <label for="email">Email: </label>
+        <input
+          id="email"
+          type="email"
+          name="email"
+          placeholder="Digite seu email"
+        />
+        <span id="errEmail"></span>
 
-            <label for="name">Nome: </label>
-            <input id="name" type="text" name="name" placeholder="Digite seu nome" />
-            <span id="errNome"></span>
+        <label for="subject">Assunto: </label>
+        <input
+          id="subject"
+          type="text"
+          name="subject"
+          placeholder="Digite o assunto da mensagem"
+        />
+        <span id="errSubject"></span>
 
-            <label for="email">Email: </label>
-            <input id="email" type="email" name="email" placeholder="Digite seu email" />
-            <span id="errEmail"></span>
+        <label for="message">Mensagem: </label>
+        <textarea
+          id="message"
+          name="message"
+          placeholder="Digite sua mensagem"
+        ></textarea>
 
-            <label for="subject">Assunto: </label>
-            <input id="subject" type="text" name="subject" placeholder="Digite o assunto da mensagem" />
-            <span id="errSubject"></span>
+        <button type="submit">Enviar</button>
+      </form>
 
-            <label for="message">Mensagem: </label>
-            <textarea id="message" name="message" placeholder="Digite sua mensagem"></textarea>
+      <!-- Seção do Google Maps -->
+      <article class="article_mapa">
+        <address>
+          <p>Plano Piloto</p>
+          <p>Brasília - DF</p>
+        </address>
 
-            <button type="submit">Enviar</button>
-
-        </form>
-
-        <!-- Seção do Google Maps -->
-        <article class="article_mapa">
-
-            <address>
-                <p>Plano Piloto</p>
-                <p>Brasília - DF</p>
-            </address>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d245796.23966887637!2d-48.102174861936156!3d-15.721156496043664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3d18df9ae275%3A0x738470e469754a24!2sBras%C3%ADlia%20-%20Plano%20Piloto%2C%20Bras%C3%ADlia%20-%20DF!5e0!3m2!1spt-PT!2sbr!4v1760464192416!5m2!1spt-PT!2sbr" 
-            width="600" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-
-        </article>
-
-
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d245796.23966887637!2d-48.102174861936156!3d-15.721156496043664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3d18df9ae275%3A0x738470e469754a24!2sBras%C3%ADlia%20-%20Plano%20Piloto%2C%20Bras%C3%ADlia%20-%20DF!5e0!3m2!1spt-PT!2sbr!4v1760464192416!5m2!1spt-PT!2sbr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </article>
     </main>
 
     <!-- Rodapé da Página (footer) -->
     <footer>
+      <!-- Seção de Contato - Redes Sociais-->
+      <section>
+        <a href="www.linkedin.com/in/janielleoliveira">
+          <img src="assets/img/linkedin.svg" alt="LinkedIn" />
+        </a>
 
-        <!-- Seção de Contato - Redes Sociais-->
-        <section>
+        <a href="https://github.com/JanielleOliveira">
+          <img src="assets/img/github.svg" alt="Github" />
+        </a>
 
-            <a href="www.linkedin.com/in/janielleoliveira">
-                <img src="assets/img/linkedin.svg" alt="LinkedIn" />
-            </a>
+        <a href="https://www.instagram.com/jane.olivi/">
+          <img src="assets/img/instagram.svg" alt="Instagram" />
+        </a>
+      </section>
 
-            <a href="https://github.com/JanielleOliveira">
-                <img src="assets/img/github.svg" alt="Github" />
-            </a>
-
-            <a href="https://www.instagram.com/jane.olivi/">
-                <img src="assets/img/instagram.svg" alt="Instagram" />
-            </a>
-
-        </section>
-
-        <h3>
-            Feito com 💚 por Janielle Oliveira - 2025
-        </h3>
-
+      <h3>Feito com 💚 por Janielle Oliveira - 2025</h3>
     </footer>
 
-</body>
-
+    <!-- Script JavaScript-->
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
